Improvements on repo structure and minor corrections to processing files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ data/*
 .idea/
 .ipynb_checkpoints/
 notebooks/root_tests
-# Do not ignore the sample_data folder and its content
+visualization/SiphraReader/build
+# Do not ignore the sample_data. Track only .dat and .json files
 !data/test_data
-!data/test_data/**
+data/test_data/*
+!data/test_data/*.dat
+!data/test_data/*.json
